Get random users to follow and refactor get new feeds api
