# twitter-clone-swagger.yaml
@@ -792,6 +792,59 @@ paths:
           $ref: '#/components/responses/UserNotFoundError'
         '422':
           description: Validation error
+  /users/random:
+    get:
+      tags:
+        - users
+      summary: Get random users
+      description: Retrieve a list of random users for the currently authenticated user to follow
+      operationId: getRandomUsers
+      security:
+        - BearerAuth: []
+      parameters:
+        - name: page
+          in: query
+          required: true
+          schema:
+            type: integer
+            example: 1
+        - name: limit
+          in: query
+          required: true
+          schema:
+            type: integer
+            example: 10
+      responses:
+        '200':
+          description: Random users retrieved successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Get random users successfully
+                  result:
+                    type: object
+                    properties:
+                      users:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/User'
+                      limit:
+                        type: integer
+                        example: 10
+                      page:
+                        type: integer
+                        example: 1
+                      total_page:
+                        type: integer
+                        example: 1
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '422':
+          description: Validation error
 
   /tweets:
     post:
